kubernetes/ml-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: ml
  namespace: factorypulse
  labels:
    app: ml

spec:
  replicas: 1

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0

  selector:
    matchLabels:
      app: ml

  template:
    metadata:
      labels:
        app: ml

    spec:
      containers:
        - name: ml

          image: sudharsanprakalathanvm/factorypulse-ml:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 5001

          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"

            limits:
              cpu: "1000m"
              memory: "1Gi"

          livenessProbe:
            httpGet:
              path: /health
              port: 5001
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 5

          readinessProbe:
            httpGet:
              path: /health
              port: 5001
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 5
