kubernetes/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: backend-service
  namespace: factorypulse
  labels:
    app: backend

spec:
  type: ClusterIP

  selector:
    app: backend

  ports:
    - name: http
      protocol: TCP
      port: 8070
      targetPort: 8070
