kubernetes/ml-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: ml-service
  namespace: factorypulse
  labels:
    app: ml

spec:
  type: ClusterIP

  selector:
    app: ml

  ports:
    - name: http
      protocol: TCP
      port: 5001
      targetPort: 5001
